
Wed Dec 13 07:09:30 1995  Chris Provenzano (proven@mit.edu)

        * Makefile.in : Move db keytab routines to lib/kdb.

Tue Dec  5 20:57:06 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in: Removed dependency on krb4 library in building
		shared library. 

Fri Nov  3 21:31:44 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Added the ccache/memory subdirectory.

Fri Oct  6 22:05:44 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Oct  2 11:12:24 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in (V5_MAKE_SHARED_LIB): Change rule to install
		version 0.1 of the library. Pass the libcrypto and
		libcom_err version number to Makefile

	* Makefile.in (CRYPTO_VER): Get the proper libcrypto version number

Mon Sep 25 17:01:48 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 13 11:11:38 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: Put back in all:: all-$(WHAT) rule--PC needs it.

Fri Jun 30 14:43:38 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add Berkeley database code here.  Remove typo in
		libupdate section.

Wed Jun 28 21:25:29 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: with static libs, we need install-unix, not install.

Mon Jun 26 17:36:53 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* Makefile.in (install-unix): This should be generated by configure.in, not Makefile.in.  My typo was there, not here.

Sun Jun 25 08:24:46 1995  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: Typo: install-mac was really supposed to be
		install-unix

Fri Jun 23 12:15:02 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* configure.in: Typo: krb5_cv_staticlibs_enabled, not
        krb5_cv_enable_staticlibs

Thu Jun 22 18:03:35 1995  Sam Hartman  (hartmans@tardis)

	* Makefile.in: Treat libcom_err.a as shared, use new conventions